# Pyronites

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  PLAN.md  README.md  deply(2).md  docker-compose.yml  fly.toml  pyproject.toml  pyrocore.db  render.yaml
backend/: app.py
backend/api/: apikeys.py  auth.py  auth_deps.py  health.py  projects.py  schemas.py  sql_editor.py  storage.py  system.py  tables.py
backend/auth/: api_keys.py  passwords.py  sessions.py  users.py
backend/core/: backup.py  db.py  logring.py  migrations.py  s3_sync.py  storage.py
backend/migrations/: 0003_add_storage_table.sql  0004_add_is_active_to_users.sql  0005_add_projects.sql
backend/tests/: test_app.py  test_critical_journey.py
backend/tests/api/: test_sql_editor.py  test_storage.py  test_tables.py
backend/tests/auth/: test_api_keys.py  test_passwords.py  test_sessions.py  test_users.py
backend/tests/core/: test_backup.py  test_db.py  test_migrations.py  test_storage.py
backups/: pyrocore_2026-07-16T14-42-13-582702.db
cli/: config.py  main.py
cli/commands/: backup.py  connect.py  db.py  init.py  keys.py  serve.py
cli/tests/: test_backup_cli.py  test_connect.py  test_db.py  test_init.py  test_keys_cli.py  test_serve.py
connectors/: nextjs.env.local.template  nextjs.pyrocore.ts.template  prisma.schema.prisma.template  python.client.py.template
frontend/: .env.production  package-lock.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api-keys/: page.tsx
frontend/app/auth/: page.tsx
frontend/app/database/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logs/: page.tsx
frontend/app/new-project/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/signup/: page.tsx
frontend/app/sql-editor/: page.tsx
frontend/app/storage/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: auth-shell.tsx  password-strength.tsx  pyrocore-layout.tsx
pyrocore/backend/auth/: api_keys.py  passwords.py  sessions.py  users.py
pyrocore/backend/core/: db.py
pyrocore/backend/migrations/: 0001_init.sql  0002_add_api_keys.sql
pyrocore/backend/tests/auth/: test_api_keys.py  test_passwords.py  test_sessions.py  test_users.py
pyrocore/backend/tests/core/: test_backup.py  test_db.py  test_migrations.py
