
[project]
name = "pyrocore"
version = "0.1.0"
description = "Self-hosted SQLite-based backend platform"
requires-python = ">=3.11"
dependencies = [
    # Exact pins so a fresh `pip install -e .` always reproduces the same
    # environment.  Update these deliberately after testing a newer version,
    # not automatically on every install.
    "fastapi==0.139.0",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "email-validator==2.3.0",     # required by pydantic[email] for EmailStr
    "argon2-cffi==25.1.0",
    "click==8.4.2",
    "python-multipart==0.0.32",   # required by FastAPI for file uploads
    "starlette==1.3.1",           # FastAPI's underlying framework
    "anyio==4.14.2",              # async I/O backend used by starlette/uvicorn
]

[project.scripts]
pyrocore = "cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "httpx==0.28.1",
    "uvicorn==0.51.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests", "cli/tests"]
pythonpath = ["."]
asyncio_mode = "auto"
